--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+/* Master styles */
 body {
     margin: 0px;
+    font-family: "Lato", sans-serif;
 }
 
 .container {
@@ -7,6 +9,7 @@ body {
     grid-template-columns: 1fr;
 }
 
+/* Nav styles */
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
@@ -36,12 +39,96 @@ body {
     transition: color 0.5s;
 }
 
+.active-nav-link {
+    border-bottom: 1px solid lightseagreen;
+}
+
+.active-nav-link a {
+    color: black !important;
+}
+
 /* tell CSS what to do with something when a hover occurs */
 .nav-link-wrapper:hover {
     border-bottom: 1px solid black;
 }
 
-
 .nav-link-wrapper a:hover {
     color: black;
+}
+
+/* Portfolio styles */
+
+.portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.portfolio-item-wrapper {
+    position: relative;
+}
+
+.portfolio-img-background {
+    height: 350px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.img-text-wrapper {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.logo-wrapper img {
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+
+.img-text-wrapper .subtitle {
+    transition: 1s;
+    font-weight: 600;
+    color: transparent;
+}
+
+.img-text-wrapper:hover .subtitle {
+    font-weight: 600;
+    color: lightseagreen;
+}
+
+.img-darken {
+    transition: 1s;
+    filter: brightness(10%);
+}
+
+.img-lighten {
+    transition: 1s;
+    filter: brightness(100%);
+}
+
+/* About page */
+.two-column-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.profile-image-wrapper img{
+    width: 100%;
+}
+
+.profile-content-wrapper {
+    padding: 30px;
+}
+
+.profile-content-wrapper h1 {
+    color: lightseagreen;
 }
