--- a/styles.css
+++ b/styles.css
@@ -93,16 +93,19 @@ body {
     margin-bottom: 20px;
 }
 
-
 .img-text-wrapper .subtitle {
-    transition: 1s;
+    transition: 0.5s;
     font-weight: 600;
     color: transparent;
 }
 
 .img-text-wrapper:hover .subtitle {
-    font-weight: 600;
     color: lightseagreen;
+}
+
+.img-text-wrapper:hover { /*make the logo and text "pop" on hover*/
+    transform: scale(1.2); 
+    transition: 0.5s;
 }
 
 .img-darken {
@@ -111,7 +114,7 @@ body {
 }
 
 .img-lighten {
-    transition: 1s;
+    transition: 0.5s;
     filter: brightness(100%);
 }
 
